ARM-QGIS/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "extensions_CustomScriptForLinux_commandToExecute": {
            "defaultValue": null,
            "type": "SecureString"
        },
        "extensions_Microsoft.Insights.VMDiagnosticsSettings_storageAccountName": {
            "defaultValue": null,
            "type": "SecureString"
        },
        "extensions_Microsoft.Insights.VMDiagnosticsSettings_storageAccountKey": {
            "defaultValue": null,
            "type": "SecureString"
        },
        "virtualMachines_kiwash_name": {
            "defaultValue": "kiwash",
            "type": "String"
        },
        "storageAccounts_kiwashgis_name": {
            "defaultValue": "kiwashgis",
            "type": "String"
        },
        "networkInterfaces_kiwash532_name": {
            "defaultValue": "kiwash532",
            "type": "String"
        },
        "publicIPAddresses_kiwash_ip_name": {
            "defaultValue": "kiwash-ip",
            "type": "String"
        },
        "virtualNetworks_kiwashGIS_vnet_name": {
            "defaultValue": "kiwashGIS-vnet",
            "type": "String"
        },
        "networkSecurityGroups_kiwash_nsg_name": {
            "defaultValue": "kiwash-nsg",
            "type": "String"
        },
        "subnets_default_name": {
            "defaultValue": "default",
            "type": "String"
        },
        "securityRules_HTTPS_name": {
            "defaultValue": "HTTPS",
            "type": "String"
        },
        "extensions_CustomScriptForLinux_name": {
            "defaultValue": "CustomScriptForLinux",
            "type": "String"
        },
        "securityRules_default_allow_ssh_name": {
            "defaultValue": "default-allow-ssh",
            "type": "String"
        },
        "extensions_Microsoft.Insights.VMDiagnosticsSettings_name": {
            "defaultValue": "Microsoft.Insights.VMDiagnosticsSettings",
            "type": "String"
        },
        "virtualMachines_kiwash_id": {
            "defaultValue": "/subscriptions/e0d145dd-ad8f-4bcf-8a44-104f31aed3ab/resourceGroups/kiwashGIS/providers/Microsoft.Compute/disks/kiwash_OsDisk_1_1114ad8eeda149809ca802a0288368a5",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/e0d145dd-ad8f-4bcf-8a44-104f31aed3ab/resourceGroups/kiwashGIS/providers/Microsoft.Compute/virtualMachines/kiwash'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_kiwash_name')]",
            "apiVersion": "2017-03-30",
            "location": "northeurope",
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_D1_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "17.10",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('virtualMachines_kiwash_name'),'_OsDisk_1_1114ad8eeda149809ca802a0288368a5')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Standard_LRS",
                            "id": "[parameters('virtualMachines_kiwash_id')]"
                        },
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_kiwash_name')]",
                    "adminUsername": "[parameters('virtualMachines_kiwash_name')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_kiwash532_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[concat('https', '://', parameters('storageAccounts_kiwashgis_name'), '.blob.core.windows.net', '/')]"
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_kiwash532_name'))]",
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_kiwashgis_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e0d145dd-ad8f-4bcf-8a44-104f31aed3ab/resourceGroups/kiwashGIS/providers/Microsoft.Network/networkInterfaces/kiwash532'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_kiwash532_name')]",
            "apiVersion": "2018-01-01",
            "location": "northeurope",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "5bec2bdf-0e22-4e56-ac32-15bdff986536",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"d80623c3-65db-414a-81c5-5ee682de5e2a\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "62.12.115.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_kiwash_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_kiwashGIS_vnet_name'), parameters('subnets_default_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "psk1ndtpsn5u1pin4giajopc4d.fx.internal.cloudapp.net"
                },
                "macAddress": "00-0D-3A-B9-89-DD",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_kiwash_nsg_name'))]"
                },
                "primary": true,
                "virtualMachine": {
                    "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_kiwash_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_kiwash_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_kiwashGIS_vnet_name'), parameters('subnets_default_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_kiwash_nsg_name'))]",
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_kiwash_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e0d145dd-ad8f-4bcf-8a44-104f31aed3ab/resourceGroups/kiwashGIS/providers/Microsoft.Network/networkSecurityGroups/kiwash-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_kiwash_nsg_name')]",
            "apiVersion": "2018-01-01",
            "location": "northeurope",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "5828e9eb-008d-4043-b373-bbd17d1602ab",
                "securityRules": [
                    {
                        "name": "HTTPS",
                        "etag": "W/\"e0c426f1-2cd8-47cd-9ee0-1e1d5e6199ec\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "default-allow-ssh",
                        "etag": "W/\"e0c426f1-2cd8-47cd-9ee0-1e1d5e6199ec\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"e0c426f1-2cd8-47cd-9ee0-1e1d5e6199ec\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"e0c426f1-2cd8-47cd-9ee0-1e1d5e6199ec\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"e0c426f1-2cd8-47cd-9ee0-1e1d5e6199ec\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"e0c426f1-2cd8-47cd-9ee0-1e1d5e6199ec\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"e0c426f1-2cd8-47cd-9ee0-1e1d5e6199ec\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"e0c426f1-2cd8-47cd-9ee0-1e1d5e6199ec\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e0d145dd-ad8f-4bcf-8a44-104f31aed3ab/resourceGroups/kiwashGIS/providers/Microsoft.Network/publicIPAddresses/kiwash-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[parameters('publicIPAddresses_kiwash_ip_name')]",
            "apiVersion": "2018-01-01",
            "location": "northeurope",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "9614a03e-9184-43f0-b1c3-83f1c7f8261e",
                "ipAddress": "52.169.22.56",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "kiwashgis",
                    "fqdn": "kiwashgis.northeurope.cloudapp.azure.com"
                },
                "ipTags": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e0d145dd-ad8f-4bcf-8a44-104f31aed3ab/resourceGroups/kiwashGIS/providers/Microsoft.Network/virtualNetworks/kiwashGIS-vnet'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_kiwashGIS_vnet_name')]",
            "apiVersion": "2018-01-01",
            "location": "northeurope",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "8eb6957c-936f-4d7f-bd0d-f19004b9e2f3",
                "addressSpace": {
                    "addressPrefixes": [
                        "62.12.115.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "etag": "W/\"4536c9eb-109a-46db-8fc3-50eb585953df\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "62.12.115.0/24"
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false,
                "enableVmProtection": false
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e0d145dd-ad8f-4bcf-8a44-104f31aed3ab/resourceGroups/kiwashGIS/providers/Microsoft.Storage/storageAccounts/kiwashgis'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_kiwashgis_name')]",
            "apiVersion": "2017-10-01",
            "location": "northeurope",
            "tags": {},
            "scale": null,
            "properties": {
                "networkAcls": {
                    "bypass": "AzureServices",
                    "virtualNetworkRules": [],
                    "ipRules": [],
                    "defaultAction": "Allow"
                },
                "supportsHttpsTrafficOnly": false,
                "encryption": {
                    "services": {
                        "file": {
                            "enabled": true
                        },
                        "blob": {
                            "enabled": true
                        }
                    },
                    "keySource": "Microsoft.Storage"
                }
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e0d145dd-ad8f-4bcf-8a44-104f31aed3ab/resourceGroups/kiwashGIS/providers/Microsoft.Compute/virtualMachines/kiwash/extensions/CustomScriptForLinux'.",
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[concat(parameters('virtualMachines_kiwash_name'), '/', parameters('extensions_CustomScriptForLinux_name'))]",
            "apiVersion": "2017-03-30",
            "location": "northeurope",
            "scale": null,
            "properties": {
                "publisher": "Microsoft.OSTCExtensions",
                "type": "[parameters('extensions_CustomScriptForLinux_name')]",
                "typeHandlerVersion": "1.4",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "fileUris": [
                        "https://iaasv2tempstoreeastus.blob.core.windows.net/vmextensionstemporary-00037ffe0fc23c1d-20180407112723592/installQGIS.sh?sv=2015-04-05&sr=c&sig=BlTYI3DFtM2q9KGnfXhPfuQFALHzywfyxXeMyPr%2FuqI%3D&se=2018-04-08T11%3A27%3A23Z&sp=rw"
                    ]
                },
                "protectedSettings": {
                    "commandToExecute": "[parameters('extensions_CustomScriptForLinux_commandToExecute')]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_kiwash_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e0d145dd-ad8f-4bcf-8a44-104f31aed3ab/resourceGroups/kiwashGIS/providers/Microsoft.Compute/virtualMachines/kiwash/extensions/Microsoft.Insights.VMDiagnosticsSettings'.",
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[concat(parameters('virtualMachines_kiwash_name'), '/', parameters('extensions_Microsoft.Insights.VMDiagnosticsSettings_name'))]",
            "apiVersion": "2017-03-30",
            "location": "northeurope",
            "scale": null,
            "properties": {
                "publisher": "Microsoft.OSTCExtensions",
                "type": "LinuxDiagnostic",
                "typeHandlerVersion": "2.3",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "xmlCfg": "PFdhZENmZz48RGlhZ25vc3RpY01vbml0b3JDb25maWd1cmF0aW9uIG92ZXJhbGxRdW90YUluTUI9IjQwOTYiPjxEaWFnbm9zdGljSW5mcmFzdHJ1Y3R1cmVMb2dzIHNjaGVkdWxlZFRyYW5zZmVyUGVyaW9kPSJQVDFNIiBzY2hlZHVsZWRUcmFuc2ZlckxvZ0xldmVsRmlsdGVyPSJXYXJuaW5nIi8+PFBlcmZvcm1hbmNlQ291bnRlcnMgc2NoZWR1bGVkVHJhbnNmZXJQZXJpb2Q9IlBUMU0iPjxQZXJmb3JtYW5jZUNvdW50ZXJDb25maWd1cmF0aW9uIGNvdW50ZXJTcGVjaWZpZXI9IlxNZW1vcnlcQXZhaWxhYmxlTWVtb3J5IiBzYW1wbGVSYXRlPSJQVDE1UyIgdW5pdD0iQnl0ZXMiPjxhbm5vdGF0aW9uIGRpc3BsYXlOYW1lP [...]
                },
                "protectedSettings": {
                    "storageAccountName": "[parameters('extensions_Microsoft.Insights.VMDiagnosticsSettings_storageAccountName')]",
                    "storageAccountKey": "[parameters('extensions_Microsoft.Insights.VMDiagnosticsSettings_storageAccountKey')]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_kiwash_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e0d145dd-ad8f-4bcf-8a44-104f31aed3ab/resourceGroups/kiwashGIS/providers/Microsoft.Network/networkSecurityGroups/kiwash-nsg/securityRules/HTTPS'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_kiwash_nsg_name'), '/', parameters('securityRules_HTTPS_name'))]",
            "apiVersion": "2018-01-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "443",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_kiwash_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e0d145dd-ad8f-4bcf-8a44-104f31aed3ab/resourceGroups/kiwashGIS/providers/Microsoft.Network/networkSecurityGroups/kiwash-nsg/securityRules/default-allow-ssh'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_kiwash_nsg_name'), '/', parameters('securityRules_default_allow_ssh_name'))]",
            "apiVersion": "2018-01-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_kiwash_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e0d145dd-ad8f-4bcf-8a44-104f31aed3ab/resourceGroups/kiwashGIS/providers/Microsoft.Network/virtualNetworks/kiwashGIS-vnet/subnets/default'.",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworks_kiwashGIS_vnet_name'), '/', parameters('subnets_default_name'))]",
            "apiVersion": "2018-01-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "62.12.115.0/24"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_kiwashGIS_vnet_name'))]"
            ]
        }
    ]
}
